2015-03-31  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix GTK+ build with REDIRECTED_XCOMPOSITE_WINDOW disabled in X11 platform.

        Also fix some unused parameter warnings when
        REDIRECTED_XCOMPOSITE_WINDOW is disabled.

        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewRenderAcceleratedCompositingResults):
        (resizeWebKitWebViewBaseFromAllocation):

2015-03-27  Andreas Kling  <akling@apple.com>

        WebProcessProxy should not retain WebBackForwardListItems forever.
        <https://webkit.org/b/143152>
        <rdar://problem/19925709>

        Reviewed by Anders Carlsson.

        Have WebProcessProxy actually forget about a WebBackForwardListItem after it's removed from
        the WebBackForwardList.

        This ensures that we don't accumulate too many of these objects, which can get quite large
        due to the session state encoded in them.

        We already have graceful handling of the case where an incoming IPC message references
        a removed back/forward list item.

        * UIProcess/WebBackForwardList.cpp:
        (WebKit::WebBackForwardList::didRemoveItem):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::backForwardRemovedItem):
        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::removeBackForwardItem):
        * UIProcess/WebProcessProxy.h:

2015-03-26  Zan Dobersek  <zdobersek@igalia.com>

        Avoid the Vector<> copy in WebTouchEvent constructor
        https://bugs.webkit.org/show_bug.cgi?id=143043

        Reviewed by Carlos Garcia Campos.

        Have the WebTouchEvent accept a Vector<> rvalue.
        The relevant code is updated so the Vector<> object is moved
        through the call chain and finally into the WebTouchEvent constructor.

        * Shared/NativeWebTouchEvent.h:
        * Shared/WebEvent.h:
        * Shared/WebTouchEvent.cpp:
        (WebKit::WebTouchEvent::WebTouchEvent):