@@ -1,3 +1,14 @@
+2015-04-02  Alexey Proskuryakov  <ap@apple.com>
+
+        Make checkURLReceivedFromWebProcess not rely on details of platform URL implementation.
+        https://bugs.webkit.org/show_bug.cgi?id=143222
+        rdar://problem/19978997
+
+        Reviewed by Sam Weinig.
+
+        * UIProcess/WebProcessProxy.cpp:
+        (WebKit::WebProcessProxy::checkURLReceivedFromWebProcess):
+
 2015-03-31  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Fix GTK+ build with REDIRECTED_XCOMPOSITE_WINDOW disabled in X11 platform.
